# autogluon-dashboard

./: .gitignore  CONTRIBUTING.md  README.md  aggregate_file.py  app.py  dashboard.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflow_scripts/: env_setup.sh  lint_check.sh  test_coverage.sh  test_dashboard.sh
.github/workflows/: continuous_integration.yml
app/: app.py
dev_data/: all_data.csv  autogluon.csv  data.csv
plots/: ag_rank_counts.py  framework_error.py  metrics_all_datasets.py  metrics_per_datasets.py  top5_all_datasets.py  top5_per_dataset.py
plotting/: ag_rank_counts.py  all_plots.py  framework_error.py  metrics_all_datasets.py  metrics_per_datasets.py  rank_counts_ag.py  top5_all_datasets.py  top5_per_dataset.py
scripts/: constants.py  data.py  plot.py  plots.py  utils.py  widget.py  widgets.py
scripts/config/: app_layout_config.py  plots_config.py  widgets_config.py
scripts/constants/: widgets_constants.py
src/app/: app.py
src/autogluon_dashboard/: aggregate_file.py  app.py  dashboard.py
src/autogluon_dashboard/app/: app.py
src/autogluon_dashboard/constants/: app_layout_constants.py  aws_s3_constants.py  csv_paths.py  df_constants.py  plots_constants.py  widgets_constants.py
src/autogluon_dashboard/plotting/: all_plots.py  errored_datasets.py  framework_boxplot.py  framework_error.py  hardware_metrics.py  interactive_df.py  metric_counts_framework.py  metrics_all_datasets.py  metrics_per_datasets.py  pareto_front.py  plot.py  rank_counts_ag.py  top5_all_datasets.py  top5_per_dataset.py
src/autogluon_dashboard/scripts/: data.py  utils.py  widget.py
src/autogluon_dashboard/scripts/constants/: app_layout_constants.py  aws_s3_constants.py  df_constants.py  plots_constants.py  widgets_constants.py
src/autogluon_dashboard/scripts/widgets/: filedownload_widget.py  number_widget.py  select_widget.py  slider_widget.py  toggle_widget.py  widget.py
src/autogluon_dashboard/utils/: aggregate_file.py  dataset_utils.py  get_data.py  panel_utils.py
src/autogluon_dashboard/widgets/: checkbox_widget.py  filedownload_widget.py  number_widget.py  select_widget.py  slider_widget.py  toggle_widget.py
src/plotting/: framework_error.py  metrics_all_datasets.py  metrics_per_datasets.py  rank_counts_ag.py  top5_all_datasets.py  top5_per_dataset.py
src/scripts/: data.py  utils.py  widget.py
src/scripts/constants/: app_layout_constants.py
tests/unittests/: mock_import.py  test_aggregate.py  test_aggregate_files.py  test_coverage.py  test_dashboard_wrapper.py  test_dataload.py  test_panel_convert.py  test_plot.py  test_utils.py  test_widget.py
tests/unittests/coverage/: test_coverage.py
tests/unittests/mock_python_file/: mock_file.py
tests/unittests/mock_python_files/: app.py  dashboard.py  mock_file.py  mock_import.py
tests/unittests/mock_python_files/sub_folder/: file.py
tests/unittests/out_file/: expected_out.py
tests/unittests/resources/: aggregated.csv  all_data.csv  metrics.csv
unittests/: test_dataload.py  test_plot.py  test_utils.py  test_widget.py
