[tool.black]
line-length = 119
target-version = ['py38', 'py39', 'py310']

[tool.isort]
known_first_party = "autogluon"
known_third_party = [
    "numpy",
    "pandas",
    "psutil",
    "pytest",
    "Pillow",
    "boto3"
]
line_length = 119
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon_dashboard"
version = "0.0.1"
authors = [
  { name="AutoGluon Community"},
]
description = "A dashboard package to view AutoGluon evaluation and benchmark metrics"
readme = "README.md"
requires-python = ">=3.8, <3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
license = {file = "LICENSE"}
dependencies = [
    "autogluon.common >=1.0.0, <2",
    "bleach >=6.0.0, <6.2.0",
    "bokeh >=3.1.0, <3.5.0",
    "boto3 >=1.26.0, <1.28.0",
    "botocore >=1.29, <1.31",
    "certifi >=2023.7, <2024.3.1",
    "charset-normalizer >=3.1.0, <3.4.0",
    "colorcet >=3.0.1, <3.2.0",
    "contourpy >=1.1.0, <1.3.0",
    "holoviews >=1.16.2, <1.19.0",
    "hvplot >=0.8.4, <1.0.0",
    "idna >=3.4, <3.7",
    "Jinja2 >=3.1.2, <=3.2.0",
    "jmespath >=1.0.1, <1.1.0",
    "linkify-it-py >=2.0.2, <2.1.0",
    "Markdown >=3.4.3, <3.7.0",
    "markdown-it-py >=2.2.0, <3.1.0",
    "MarkupSafe >=2.1.3, <2.2.0",
    "mdit-py-plugins >=0.4.0, <0.5.0",
    "mdurl >=0.1.2, <0.2.0",
    "numpy >=1.24.3, <1.27.0",
    "packaging >=23.1, <25.0",
    "pandas >=1.5.3, <2.2.0",
    "panel >=1.1.0, <1.5.0",
    "param >=1.13.0, <2.2.0",
    "Pillow >=10.0.1, <10.3.0",
    "psutil >=5.9.5, <6.0.0",
    "pyct >=0.5.0, <0.6.0",
    "python-dateutil >=2.8.2, <2.9.1",
]

[project.scripts]
agdash = "autogluon_dashboard.dashboard:run_dashboard"

[project.urls]
"Source" = "https://github.com/autogluon/autogluon-dashboard"
"Bug Reports" = "https://github.com/autogluon/autogluon-dashboard/issues"

[project.optional-dependencies]
tests = ["pytest", "pytest-mock", "tox"]

[tool.pytest.ini_options]
addopts = "--cov src/autogluon_dashboard --cov-report term-missing --ignore=tests/unittests/coverage/"
[tool.coverage.run]
omit = ["app.py", "dashboard.py"]
